# data

./: README.md  VEDIC_TEXT_ENCODING_ANALYSIS.md  source_exploration_results.json
scrape/vedavms/: Cargo.toml  sample
scrape/vedavms/outputs/: TS-1.1.1.1.json  TS-1.1.14.1.json  TS-1.1.4.1.json  TS-1.1.5.1.json  TS-1.1.6.1.json  TS-1.1.7.2.json  TS-1.2.14.2.json  TS-1.2.14.4.json  TS-1.2.14.6.json  TS-1.2.2.3.json  TS-1.2.3.2.json  TS-1.2.5.1.json  TS-1.2.6.1.json  TS-1.2.8.1.json  TS-1.2.9.1.json  TS-1.3.13.2.json  TS-1.4.1.2.json  TS-1.4.13.1.json  TS-1.4.15.1.json  TS-1.4.19.1.json  TS-1.4.25.1.json  TS-1.4.27.1.json  TS-1.4.29.1.json  TS-1.4.31.1.json  TS-1.4.33.1.json  TS-1.4.35.1.json  TS-1.4.37.1.json  TS-1.4.39.1.json  TS-1.4.41.1.json  TS-1.4.43.1.json  TS-1.4.44.3.json  TS-1.4.46.3.json  TS-1.4.7.1.json  TS-1.4.9.1.json  TS-1.5.1.2.json  TS-1.5.1.4.json  TS-1.5.10.2.json  TS-1.5.2.2.json  TS-1.5.2.4.json  TS-1.5.3.1.json  (+47 more)
scrape/vedavms/outputs/padam/: TS.json
scrape/vedavms/outputs/samhita/: TS-1.1.14.3.json  TS-1.1.2.2.json  TS-1.2.10.2.json  TS-1.2.11.2.json  TS-1.2.12.2.json  TS-1.2.13.1.json  TS-1.2.13.3.json  TS-1.2.2.1.json  TS-1.2.4.1.json  TS-1.3.10.2.json  TS-1.3.14.2.json  TS-1.4.11.1.json  TS-1.4.17.1.json  TS-1.4.21.1.json  TS-1.4.23.1.json  TS-1.4.3.1.json  TS-1.4.44.1.json  TS-1.4.45.2.json  TS-1.4.46.1.json  TS-1.4.5.1.json  TS-1.5.10.4.json  TS-1.5.11.2.json  TS-1.5.11.4.json  TS-1.5.6.2.json  TS-1.5.6.4.json  TS-1.5.7.2.json  TS-1.5.8.2.json  TS-1.5.9.5.json  TS-1.6.10.1.json  TS-1.6.10.3.json  TS-1.6.11.3.json  (+963 more)
scrape/vedavms/src/: main.rs
(+625 files in other folders)
