[package]
name = "vedavms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.194", features = ["derive"] }
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["blocking"] }
select = "0.6.0"
serde_json = "1.0.110"
rusqlite = "0.30.0"
itertools = "0.12.0"

[profile.release]
debug = true
